# rustypub

./: .gitignore  Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  rust.yml
activitypub/: all.html  index.html  trait.Serde.html
activitypub/core/: index.html  sidebar-items.js  struct.Activity.html  struct.ActivityBuilder.html  struct.Collection.html  struct.CollectionBuilder.html  struct.Context.html  struct.ContextBuilder.html  struct.Document.html  struct.IntransitiveActivity.html  struct.IntransitiveActivityBuilder.html  struct.Link.html  struct.LinkBuilder.html  struct.Null.html  struct.Object.html  struct.ObjectBuilder.html  struct.Preview.html  struct.PreviewBuilder.html  struct.Uri.html  struct.UriBuilder.html
activitypub/extended/: index.html  sidebar-items.js  struct.Actor.html  struct.ActorBuilder.html
implementors/activitypub/: trait.Serde.js
implementors/rustypub/: trait.Serde.js
rustypub/: all.html  index.html  sidebar-items.js  trait.Serde.html
rustypub/core/: enum.ContextBuilderError.html  enum.DocumentBuilderError.html  index.html  sidebar-items.js  struct.Activity.html  struct.ActivityBuilder.html  struct.Collection.html  struct.CollectionBuilder.html  struct.CollectionPage.html  struct.CollectionPageBuilder.html  struct.Context.html  struct.ContextBuilder.html  struct.Document.html  struct.DocumentBuilder.html  struct.IntransitiveActivity.html  struct.IntransitiveActivityBuilder.html  struct.Link.html  struct.LinkBuilder.html  (+11 more)
src/: core.rs  extended.rs  lib.rs
(+79 files in other folders)
