[package]
name = "rustypub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
http = "0.2.8"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_tuple = "0.5.0"

[dev-dependencies]
pretty_assertions = "1"
