[package]
name = "rustypub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-serde = "1.1.2"
chrono = { version = "0.4.19", default-features = false, features = ["serde"] }
http = "0.2.8"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_tuple = "0.5.0"
derive_builder = "0.12.0"

[dev-dependencies]
pretty_assertions = "1"
